--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "@prisma/client": "^3.2.1"
+    "@prisma/client": "^3.2.1",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "node-fetch": "^3.0.0"
   }
 }
