--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint:fix": "eslint --ext .ts src --fix"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "prisma": "^3.2.1",
@@ -27,7 +29,6 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
     "node-fetch": "^3.0.0"
   }
 }
