--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "@prisma/client": "^3.2.1",
+    "@quixo3/prisma-session-store": "^3.1.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
+    "express-session": "^1.17.2",
     "node-fetch": "^3.0.0"
   }
 }
