--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@quixo3/prisma-session-store": "^3.1.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
     "node-fetch": "^3.0.0"
