--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "eslint --ext .ts src --fix"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^14.14.25",
