--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
+    "multer": "^1.4.3",
     "node-fetch": "^3.0.0"
   }
 }
