--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^14.14.25",
@@ -36,6 +37,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
+    "multer": "^1.4.3",
     "node-fetch": "^3.0.0"
   }
 }
