--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
     "node-fetch": "^3.0.0",
-    "razorpay": "^2.0.7"
-    "multer": "^1.4.3",
+    "razorpay": "^2.0.7",
+    "joi": "^17.4.2",
+    "multer": "^1.4.3"
   }
 }
