--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
     "node-fetch": "^3.0.0",
-    "razorpay": "^2.0.7"
-    "multer": "^1.4.3",
+    "razorpay": "^2.0.7",
+    "joi": "^17.4.2",
+    "multer": "^1.4.3"
   }
 }
