--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "deep-email-validator": "^0.1.18",
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "multer": "^1.4.3",
     "node-fetch": "^3.0.0",
