--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=5000
 DATABASE_URL="<your mysql database url>"
-CLIENT_ORIGIN="[http://localhost:3000](http://localhost:3000/)"
-API_BASE_URL="[http://localhost:5000](http://localhost:5000/)"
+CLIENT_ORIGIN="http://localhost:3000"
+API_BASE_URL="http://localhost:5000"
 SESSION_NAME="<your session name>"
 COOKIE_SECRET="<your cookie secret>"
 UPLOADS_ROOT=<serve images and documents from here>
